apps/immich/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: immich-server
  name: immich-server
spec:
  ports:
    - name: "http"
      port: 2283
      targetPort: 3001
  selector:
    app: immich-server
