apps/immich/base/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich
  namespace: immich
spec:
  entryPoints:
    - websecure-local
  tls: {}
  routes:
  - match: Host(`embyk.steffenillium.de`)
    kind: Rule
    services:
    - name: immich-server
      port: server
